# infrajet-nexgen-repo

./: .gitignore  CLAUDE.md  README.md  TESTING_FIREBASE_AUTH.md  dev.nix  release-please-config.json
backend/: CHANGELOG.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/data_migrations/: README.md  __init__.py  migrate_existing_users_to_azure_entra.py  test_migration_structure.py  validate_azure_entra_schema.py
backend/alembic/versions/: 0b70656934f4_add_user_preferences_and_websocket_.py  1b8b0a15fe6c_merge_migration_heads.py  1fe8ca7c007a_add_azure_entra_fields_to_users.py  4ad086e9e217_add_project_chats_table_for_chat_.py  4e3b9f81f486_add_cloud_provider_to_conversation_.py  562f4458b9e3_add_github_user_id_and_oauth_fields_to_.py  5daa6e0db591_change_user_id_from_integer_to_string_.py  5f409f4af68b_cleanup_index_inconsistencies.py  6ee568782e2c_add_missing_github_sync_indexes.py  751d97eea485_remove_user_foreign_key_constraint_for_.py  7abbcd5ee9e7_add_clarification_request_to_.py  8554c68dae0b_update_schema_for_github_app_and_remove_.py  8915fd1fe2df_add_github_sync_records_table.py  963e787ba7e8_enable_pgvector_extension_and_convert_.py  adc694485be9_add_performance_indexes_for_azure_entra_.py  add_autonomous_chat_tables.py  add_enhanced_chat_tables.py  add_github_connected_at_to_connections.py  add_github_connections_table.py  add_github_sync_enhancements.py  add_project_management_tables.py  b51003a8d1fe_.py  b77186869fc6_add_supabase_user_id_and_username_to_.py  d22047f97629_remove_user_foreign_key_constraints_.py  d5e66ae95ca5_migrate_data_for_github_app_integration.py  dc93aca59348_merge_heads.py  e1a620b22fea_add_embedding_tables.py  e6ef5e72eb0e_.py  e841ac6f60f9_add_generation_id_to_project_chats.py  eb7a60e7f763_merge_heads.py  enhanced_embeddings_migration.py  f80e301913ef_create_github_connections_table.py
backend/app/core/: azure_config.py  azure_entra.py  github.py  redis_client.py  security.py  settings.py
backend/logconfig/: logger.py
(+337 files in other folders)
